opam-version: "1.2"
maintainer: "Adam Ringwood <adam@nexadmin.com>"
authors: [ "Adam Ringwood <adam@nexadmin.com>" ]
license: "MIT"
homepage: "https://github.com/unrealakama/presigner"
dev-repo: "https://github.com/unrealakama/presigner"
bug-reports: "https://github.com/unrealakama/presigner"
build: ["dune" "build" "@install"]
build-test: ["dune" "build" "@runtest"]
build-doc: [ "dune" "build" "@doc" ]
depends: [
  "dune"
  "cmdliner" {>= "1.0.0"}
  "lwt" {>= "2.7.0"}
  "lwt_ppx"
  "ocaml-monadic" {>= "0.4.0"}
  "aws-s3"
  "aws-s3-lwt"
]
available: [ ocaml-version >= "4.05.0" ]
